plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.aissummarizer'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.5.6'
	implementation "com.openai:openai-java:4.8.0"
	compileOnly 'org.projectlombok:lombok'
	implementation 'org.apache.poi:poi:5.4.1'
	implementation 'org.apache.poi:poi-ooxml:5.4.1'
	implementation 'org.apache.pdfbox:pdfbox:3.0.6'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'org.apache.pdfbox:pdfbox:3.0.6'
	implementation 'org.springframework.boot:spring-boot-starter-security:3.5.7'
	implementation 'org.hibernate.orm:hibernate-community-dialects:7.1.8.Final'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
	implementation 'com.google.guava:guava:33.5.0-jre'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.postgresql:postgresql:42.7.3'
	testImplementation 'org.springframework:spring-mock:2.0.8'
}

tasks.named('test') {
	useJUnitPlatform()
}
